fix alignment on genre's error

--- a/website/src/components/form/genreField.css
+++ b/website/src/components/form/genreField.css
@@ -1,4 +1,5 @@
 .genreField-error {
+    width: 100%;
     font-size: 0.8rem;
     color: red;
     text-align: center;
